feat(auth): добавила авторизацию и auth-guard

--- a/server/.development.env
+++ b/server/.development.env
@@ -5,3 +5,4 @@ POSTGRES_USERNAME= postgres
 POSTGRES_DB_PORT= 5432
 POSTGRES_DB_PASSWORD= root
 POSTGRES_DB_NAME= uniboy-shop
+PRIVATE_KEY= secret_key_8gj3iur0g
